k8s/ingress/aks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project2-api
  namespace: p2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: project2.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: project2-api
                port:
                  number: 80
